# iRM_Embedded_2022

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  TypeA.ioc  config.py  run-clang-format.py
boards/: CMakeLists.txt
boards/DJI_Board_TypeA/: CMakeLists.txt  DJI_Board_TypeA.ioc  Makefile  STM32F427IIHx_FLASH.ld
boards/DJI_Board_TypeA/Core/Inc/: FreeRTOSConfig.h  can.h  dma.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
boards/DJI_Board_TypeA/Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
boards/DJI_Board_TypeA/FATFS/App/: fatfs.c
boards/DJI_Board_TypeA/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
boards/DJI_Board_TypeC/: CMakeLists.txt  DJI_Board_TypeC.ioc  Makefile  STM32F407IGHx_FLASH.ld
boards/DJI_Board_TypeC/Core/Inc/: FreeRTOSConfig.h  dma.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
boards/DJI_Board_TypeC/Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
boards/DJI_Board_TypeC/USB_DEVICE/App/: usbd_desc.c
boards/F103C8/: CMakeLists.txt  F103C8.ioc  Makefile  STM32F103C8Tx_FLASH.ld
boards/F103C8/Core/Inc/: FreeRTOSConfig.h  can.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h
boards/F103C8/Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
cmake/: arm_toolchain.cmake  build_helper.cmake  clang_format.cmake  (+1 more)
examples/: CMakeLists.txt
examples/445/: CMakeLists.txt  main.cc
examples/air_pump/: CMakeLists.txt  main.cc
examples/arm/: CMakeLists.txt  main.cc
examples/buzzer/: CMakeLists.txt  main.cc
examples/can_bridge/: CMakeLists.txt  receive.cc  send.cc
examples/chassis/: CMakeLists.txt  main.cc
examples/com_sentry/: CMakeLists.txt  standard.cc
examples/combined/: CMakeLists.txt  gimbal&shooter.cc
examples/dart/: CMakeLists.txt  main.cc
examples/dbus/: CMakeLists.txt  main.cc
examples/eigen/: CMakeLists.txt  f103.cc  typeA.cc
examples/engineer/: CMakeLists.txt  main.cc
examples/engineer_arm/: CMakeLists.txt  main.cc
examples/fortress/: CMakeLists.txt  fortress.cc  main.cc
examples/gimbal/: CMakeLists.txt  friction_comp.cc  gimbal.cc  hero_2022.cc  imu_hero_2022.cc  imu_stablized.cc  main.cc  official.cc  scout_2022.cc  typeC.cc
examples/heater/: CMakeLists.txt  main.cc
examples/imu/: BMI088.cc  CMakeLists.txt  ahrs.cc  calibrate.cc  estimate.cc  ist8310_timestamp.cc  magCal.m  main.cc  naive_calibrate.cc  poseEstimate.cc  typeA.cc  typeC.cc  visualize_2019a.slx
examples/imu_i2c/: CMakeLists.txt  gimbal.cc  main.cc
examples/infantry/: CMakeLists.txt  main.cc  read_imu.cc
examples/infrared/: CMakeLists.txt  main.cc
examples/laser/: CMakeLists.txt  main.cc
examples/led/: CMakeLists.txt  f103.cc  typeA.cc  typeC.cc
examples/lidar07/: CMakeLists.txt  i2c.cc  main.cc  uart.cc
examples/minipc/: CMakeLists.txt  gimbal_decode.cc  main.cc  test.cc
examples/motor/: CMakeLists.txt  fortress.cc  m3508.cc  m3508_antijam.cc  m3508_output_constraint.cc  m3508_position.cc  m3508_self-test.cc  m3508_speed.cc  m3508_steering.cc  m3508_steering_align.cc  m6020.cc  m6623.cc  pwm.cc
examples/official/: CMakeLists.txt  main.cc
examples/oled/: CMakeLists.txt  main.cc
examples/protocol/: CMakeLists.txt  client.cc  host.cc
examples/referee/: CMakeLists.txt  main.cc
examples/relay/: CMakeLists.txt  main.cc
examples/robot_arm/: CMakeLists.txt  main.cc
examples/robotic_arm/: CMakeLists.txt  main.cc
examples/rtos/: CMakeLists.txt  spinlock.cc  typeA.cc
examples/sdio/: CMakeLists.txt  main.cc
examples/sensor/: CMakeLists.txt  main.cc
examples/servo/: .main.cc.swp  .typeC.cc.swp  CMakeLists.txt  main.cc  test.cc  typeC.cc
examples/shooter/: CMakeLists.txt  main.cc
examples/shooter_ui/: CMakeLists.txt  main.cc
examples/steering/: CMakeLists.txt  main.cc  steering_chassis.cc  steering_test.cc
examples/stepper/: CMakeLists.txt  main.cc
examples/supercap/: CMakeLists.txt  main.cc
examples/supercapacitors/: CMakeLists.txt  main.cc
examples/turret/: CMakeLists.txt  hero_2022.cc  turret.cc
examples/uart/: CMakeLists.txt  main.cc
examples/ui&shooter/: ui&shooter.cpp
examples/ultrasonic/: CMakeLists.txt  main.cc
examples/usb/: CMakeLists.txt  main.cc
examples/user_interface/: CMakeLists.txt  main.cc
shared/: CMakeLists.txt
shared/bsp/: bsp_RGB.cc  bsp_bmi088_reg.h  bsp_buzzer.cc  bsp_buzzer.h  bsp_can.cc  bsp_can.h  bsp_can_bridge.cc  bsp_can_bridge.h  bsp_error_handler.cc  bsp_error_handler.h  bsp_gpio.cc  bsp_gpio.h  bsp_heater.cc  bsp_heater.h  bsp_imu.cc  bsp_imu.h  bsp_imu_ext.cc  bsp_imu_ext.h  bsp_imu_i2c.cc  bsp_imu_i2c.h  bsp_infrared.cc  bsp_infrared.h  bsp_ist8310_reg.h  bsp_laser.cc  bsp_laser.h  bsp_memory.cc  bsp_mpu6500_reg.h  bsp_os.cc  bsp_os.h  bsp_print.cc  bsp_print.h  bsp_pwm.cc  bsp_pwm.h  bsp_relay.cc  bsp_relay.h  bsp_rgb.cc  bsp_rgb.h  bsp_sdio.cc  bsp_sdio.h  bsp_uart.cc  (+5 more)
shared/libraries/: MahonyAHRS.cc  MahonyAHRS.h  chassis.cc  chassis.h  controller.cc  controller.h  dbus.cc  dbus.h  fortress.cc  fortress.h  gimbal.cc  gimbal.h  lidar07.cc  lidar07.h  minipc.cc  minipc.h  motor.cc  motor.h  oled.cc  oled.h  pose.cc  pose.h  power_limit.cc  power_limit.h  protocol.cc  protocol.h  referee.cc  referee.h  rgb.cc  rgb.h  robot_arm.cc  robot_arm.h  robotic_arm.cc  robotic_arm.h  servo.cc  servo.h  shooter.cc  shooter.h  steering.cc  steering.h  (+10 more)
src/: CMakeLists.txt
src/bsp/: bsp_buzzer.cc  bsp_can.h  bsp_error_handler.cc  bsp_kalman.h  bsp_memory.cc  bsp_mpu6500_reg.h  bsp_os.h  bsp_pwm.h  bsp_uart.h
src/example/: CMakeLists.txt
src/module/: printf.c  printf.h
vehicles/config/: CHASSIS_CONFIG.h  CMakeLists.txt  GIMBAL_CONFIG.h  SHOOTER_CONFIG.h  dictionary.yaml  generate_all.py  yaml_list
vehicles/config/config_files/: example.yaml  gimbal.yaml  shooter.yaml  yaml_to_header_convertor.py
(+377 files in other folders)
